--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="ISO-8859-1" />
     <title>Spring Boot Application</title>
     <link href="css/styles.css" rel="stylesheet" />
+    <script type="text/javascript" src="js/main.js"></script>
   </head>
   <body>
     <h4>
