--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,25 +12,32 @@
         <button type="submit">Submit</button>
     </form>
 
-    <h4 th:text="'Total account worth: ' + ${userAccountWorth}"></h4>
-    <h4 th:text="'Current Balance: $' + ${userBalance}"></h4>
+    <h4 th:text="'Total account worth: $' + ${userAccountWorth}" />
+    <h4 th:text="'Current Balance: $' + ${userBalance}" />
 
-    <table>
-      <thead>
-          <tr>
-              <th> Stocks </th>
-              <th> Amount </th>
-              <th> Current Price </th>
-              <th> Total Equity </th>
+    <div th:if="not ${portfolioData.isEmpty()}">
+      <table>
+        <thead>
+            <tr>
+                <th> Stocks </th>
+                <th> Amount </th>
+                <th> Current Price </th>
+                <th> Total Equity </th>
+            </tr>
+        </thead>
+        <tbody>
+          <tr th:each="stock : ${portfolioData}">
+            <td th:text="${stock.key}" />
+            <td th:text="${stock.value.get('numShares')}" />
+            <td th:text="'$' + ${stock.value.get('currentPrice')}" />
+            <td th:text="'$' + ${stock.value.get('totalEquity')}" />
           </tr>
-      </thead>
-      <tbody>
-        <tr th:each="stock : ${portfolio}">
-          <td th:text="${stock.key}">stockName</td>
-          <td th:text="${stock.value}">numOwned</td>
-        </tr>
-      </tbody>
-    </table>
+        </tbody>
+      </table>
+    </div>
+    <div th:unless="not ${portfolioData.isEmpty()}">
+        <div th:text="'You currently have no open positions!'"></div>
+     </div>
 
   </body>
 </html>
