--- a/src/main/resources/templates/stock.html
+++ b/src/main/resources/templates/stock.html
@@ -19,27 +19,26 @@
     <h4 th:text="'Stock: ' + ${ticker}"></h4>
     <h4 th:text="'Stock Price: ' + ${stockPrice}"></h4>
     <h4 th:text="'Current Position: ' + ${numSharesOwned} + ' shares owned'"></h4>
-
+    
     <!-- TradingView Widget BEGIN -->
     <div class="tradingview-widget-container">
-      <div id="tradingview_0f339"></div>
+      <div id="tradingview_e230a"></div>
       <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NASDAQ-AAPL/" rel="noopener" target="_blank"><span class="blue-text">AAPL Chart</span></a> by TradingView</div>
       <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
       <script type="text/javascript">
       new TradingView.widget(
       {
       "autosize": true,
-      "symbol": "AAPL",
+      "symbol": "[[${ticker}]]",
       "interval": "15",
-      "timezone": "Etc/UTC",
+      "timezone": "America/New_York",
       "theme": "light",
-      "style": "1",
+      "style": "2",
       "locale": "en",
       "toolbar_bg": "#f1f3f6",
       "enable_publishing": false,
       "hide_top_toolbar": true,
-      "allow_symbol_change": true,
-      "container_id": "tradingview_0f339"
+      "container_id": "tradingview_e230a"
     }
       );
       </script>
