--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,21 +2,28 @@
 <html xmlns:th="http://thymeleaf.org">
   <head>
     <meta charset="ISO-8859-1" />
-    <title>Spring Boot Application</title>
-    <link href="css/styles.css" rel="stylesheet" />
+    <title>Stock Market Simulator</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
   </head>
   <body>
 
-    <form method="POST" action="/stock">
-        <input type="text" name="ticker" placeholder = "Search for a stock"></input>
-        <button type="submit">Submit</button>
+   <form method="POST" action="/stock">
+          <input type="text" name="ticker" placeholder="Search for a stock"></input>
+          <button type="submit" class="btn btn-info btn btn-primary btn-sm">
+            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+          </button>
     </form>
 
     <h4 th:text="'Total account worth: $' + ${userAccountWorth}" />
     <h4 th:text="'Current Balance: $' + ${userBalance}" />
 
+
+
     <div th:if="not ${portfolioData.isEmpty()}">
-      <table>
+      <table class="table table-bordered">
         <thead>
             <tr>
                 <th> Stocks </th>
